<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    tools:context=".createActivities.CreateTaskActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>


    <EditText
        android:id="@+id/et_task_title"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:layout_below="@id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_task_details"
        android:hint="@string/details"
        android:layout_below="@id/et_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/deadline_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_below="@id/et_task_details"
        android:layout_marginTop="10dp"
        android:text="@string/deadline" />

    <TextView
        android:id="@+id/due_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/deadline_tv"
        android:layout_marginStart="68dp"
        android:hint="@string/no_deadline" />

    <TextView
        android:id="@+id/project_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_below="@id/deadline_tv"
        android:text="@string/project" />

    <TextView
        android:id="@+id/selected_project_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deadline_tv"
        android:layout_toEndOf="@+id/deadline_tv"
        android:hint="@string/hint_no_project" />

    <Button
        android:id="@+id/pick_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/deadline_tv"
        android:text="@string/pick_date" />

    <Button
        android:id="@+id/pick_project_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/pick_date_button"
        android:text="@string/pick_project" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_save_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        app:fabSize="normal"
        android:src="@mipmap/baseline_save_black_36dp"/>
</RelativeLayout>