<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@mipmap/baseline_add_black_36dp"
        app:fabSize="normal"
        tools:layout_editor_absoluteX="312dp"
        tools:layout_editor_absoluteY="495dp" />

    <TextView
        android:id="@+id/task_title_tv"
        tools:text="Task Title"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_below="@id/appBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/task_content_tv"
        tools:text="Task Content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_title_tv"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/deadline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_content_tv"
        android:layout_marginStart="10dp"
        android:text="@string/deadline"/>

    <TextView
        android:id="@+id/task_date"
        android:hint="@string/no_deadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/deadline_text"
        android:layout_below="@id/task_content_tv"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/project_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_below="@id/task_date"
        android:text="@string/assigned_to_project"/>

    <TextView
        android:id="@+id/task_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deadline_text"
        android:layout_toEndOf="@+id/project_text"
        android:hint="@string/no_project"/>


    <Button
        android:id="@+id/pick_project_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/task_title_tv"
        android:layout_below="@+id/project_text"
        android:text="Add to Project"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="281dp" />

    <LinearLayout
        android:id="@+id/layout_fab_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clipToPadding="false"
        android:padding="@dimen/standard_12"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_project"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@mipmap/baseline_ballot_black_18dp"
            app:fabSize="mini" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_fab_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clipToPadding="false"
        android:padding="@dimen/standard_12"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_note"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@mipmap/baseline_note_add_black_18dp"
            app:fabSize="mini" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_fab_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:clipToPadding="false"
        android:padding="@dimen/standard_12"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@mipmap/baseline_done_black_18dp"
            app:fabSize="mini" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>