<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="312dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/card_today"
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_marginEnd="@dimen/card_margin_end"
                android:layout_marginStart="@dimen/card_margin_start"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/today" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_tomorrow"
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_marginEnd="@dimen/card_margin_end"
                android:layout_marginStart="@dimen/card_margin_start"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_today">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tomorrow" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_other_time"
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_marginEnd="@dimen/card_margin_end"
                android:layout_marginStart="@dimen/card_margin_start"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_tomorrow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/other_time" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_finished_tasks"
                android:layout_width="@dimen/card_width"
                android:layout_height="@dimen/card_height"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="@dimen/card_margin_end"
                android:layout_marginStart="@dimen/card_margin_start"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_other_time"
                app:layout_constraintVertical_bias="0.517">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/finished_tasks" />

            </android.support.v7.widget.CardView>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card_finished_tasks" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/projects_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/projects_title"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_projects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="40dp"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>