<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/note_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_margin="10dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/appBarLayout"
            tools:text="Title" />

        <TextView
            android:id="@+id/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/note_details_title"
            android:layout_margin="10dp"
            android:layout_alignParentStart="true"
            android:text="@string/details"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/note_details_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/details_title"
            tools:text="Content" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            app:fabSize="normal"
            android:src="@mipmap/baseline_add_black_36dp"/>

        <LinearLayout
            android:id="@+id/layout_fab_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:clipToPadding="false"
            android:padding="@dimen/standard_12"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_project"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:src="@mipmap/baseline_ballot_black_18dp"
                app:fabSize="mini" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fab_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:clipToPadding="false"
            android:padding="@dimen/standard_12"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_note"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:src="@mipmap/baseline_note_add_black_18dp"
                app:fabSize="mini" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fab_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:clipToPadding="false"
            android:padding="@dimen/standard_12"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_task"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="16dp"
                android:src="@mipmap/baseline_done_black_18dp"
                app:fabSize="mini" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>