<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_gravity="center"
        android:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview_tasks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/scrollview_tasks"
        app:layout_anchorGravity="bottom|end"
        android:layout_margin="16dp"
        app:fabSize="normal"
        android:src="@mipmap/baseline_add_black_36dp"/>

    <LinearLayout
        android:id="@+id/layout_fab_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:clipToPadding="false"
        android:padding="@dimen/standard_12"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_project"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@mipmap/baseline_ballot_black_18dp"
            app:fabSize="mini" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_fab_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:clipToPadding="false"
        android:padding="@dimen/standard_12"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_note"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@mipmap/baseline_note_add_black_18dp"
            app:fabSize="mini" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_fab_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="bottom|end"
        android:clipToPadding="false"
        android:padding="@dimen/standard_12"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="16dp"
            android:src="@mipmap/baseline_done_black_18dp"
            app:fabSize="mini" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>



